OldArchive/6618703b1da267a93a258e90542aa2c2-d6c803482d553f395422ddf5510f4bb0/output
main.cpp:4:1: error: ‘once_flag’ in namespace ‘std’ does not name a type
 std::once_flag flag;
 ^
main.cpp: In function ‘void do_once(bool)’:
main.cpp:22:5: error: ‘call_once’ is not a member of ‘std’
     std::call_once(flag, may_throw_function, do_throw);
     ^
main.cpp:22:20: error: ‘flag’ was not declared in this scope
     std::call_once(flag, may_throw_function, do_throw);
                    ^
